--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
+    "react-spring-pop": "^1.3.2",
     "styled-components": "^5.2.0"
   },
   "scripts": {
